--- a/ParkIT.Api/Properties/launchSettings.json
+++ b/ParkIT.Api/Properties/launchSettings.json
@@ -16,7 +16,9 @@
       "launchUrl": "swagger",
       "applicationUrl": "http://localhost:5243",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "DOTNET_ROOT": "/usr/share/dotnet"
+
       }
     },
     "https": {
