--- a/ParkIT.Domain/ParkIT.Domain.csproj
+++ b/ParkIT.Domain/ParkIT.Domain.csproj
@@ -7,4 +7,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\ParkIT.Shared.Abstractions\ParkIT.Shared.Abstractions.csproj" />
+    </ItemGroup>
+
 </Project>
